--- a/take_pic_demo/pubspec.yaml
+++ b/take_pic_demo/pubspec.yaml
@@ -30,9 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  image_picker: ^0.8.7
+  image_picker: ^0.8.7+1
 #  google_ml_kit: ^0.13.0
-  path_provider: ^2.0.13
+#  path_provider: ^2.0.13
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
