--- a/mlkit_demo/pubspec.yaml
+++ b/mlkit_demo/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   image_picker: ^0.8.7
-  google_ml_kit: ^0.13.0
+#  google_ml_kit: ^0.13.0
+  google_mlkit_face_detection: ^0.5.0
   path_provider: ^2.0.13
 
   # The following adds the Cupertino Icons font to your application.
