--- a/speech_demo/android/app/src/main/AndroidManifest.xml
+++ b/speech_demo/android/app/src/main/AndroidManifest.xml
@@ -1,11 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT"/>
     <queries>
         <intent>
-            <action android:name="android.intent.action.TTS_SERVICE" />
+            <action android:name="android.speech.RecognitionService" />
         </intent>
     </queries>
+
     <application
         android:label="speech_demo"
         android:name="${applicationName}"
