--- a/sqlitedb_demo/pubspec.yaml
+++ b/sqlitedb_demo/pubspec.yaml
@@ -30,11 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sqflite: ^2.4.2
-  path_provider: ^2.1.5
+
+  #path_provider: ^2.1.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  path: ^1.9.1
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
