Total rework of the example.  With FirebaseUI.
Removed a lot of confusing pieces as well.  Made the example easer to follow, but it needs comments.

--- a/flutterfirebasedemo/pubspec.yaml
+++ b/flutterfirebasedemo/pubspec.yaml
@@ -30,14 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cloud_firestore: ^5.6.5
-  firebase_core: ^3.12.1
+  cloud_firestore: ^5.6.6
+  firebase_core: ^3.13.0
   firebase_auth: ^5.5.1
   google_fonts: ^6.2.1
   provider: ^6.1.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  firebase_ui_auth: ^1.16.1
 
 dev_dependencies:
   flutter_test:
@@ -89,5 +90,10 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
+  fonts:
+    - family: SocialIcons
+      fonts:
+        - asset: packages/firebase_ui_auth/fonts/SocialIcons.ttf
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
