--- a/mlkit_demo/pubspec.yaml
+++ b/mlkit_demo/pubspec.yaml
@@ -42,6 +42,7 @@ dev_dependencies:
   # google_ml_kit: ^0.19.0
   google_mlkit_face_detection: ^0.12.0
   path_provider: ^2.1.5
+  image: ^4.5.4
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -61,7 +62,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+   - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
